# dropboxignore

./: Cargo.toml  README.md
.github/workflows/: linux-release.yml  rust.yaml
src/: main.rs
