[package]
name = "dropboxignore"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A tool to use .dropboxignore files to exclude files from Dropbox syncing"
authors = ["Anton Berneving"]
keywords = ["dropbox", "dropboxignore"]
categories = ["command-line-utilities", "filesystem"]
repository = "https://github.com/antbern/dropboxignore"
readme = "README.md"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
anyhow = "1.0"
xattr = { version = "1.5.1", default-features = false, features = ["unsupported"] }

# we really ony care about a subset of this, but for now we need to bring in all the deps of it
ignore = { version = "0.4", default-features = false }
